add tectonic plates layer

--- a/earthquakes.html
+++ b/earthquakes.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <!-- Plugin for leaflet AJAX -->
+    <script src="plates/leaflet-ajax/dist/leaflet.ajax.min.js"></script>
     <!-- Our CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
