update coloring scale and size of circle markers

--- a/earthquakes.html
+++ b/earthquakes.html
@@ -8,6 +8,8 @@
     <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
   
+    <script type="text/javascript" src="http://skeate.github.io/Leaflet.timeline/javascripts/leaflet.timeline.js"></script>
+
     <!-- Our CSS -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
